chrome tablet fix attempt webkit backface visiblity

--- a/css/page.css
+++ b/css/page.css
@@ -199,12 +199,15 @@ h4 {
 }
 .sticky {
     position: fixed;
+    -webkit-backface-visibility: hidden;
     top:0px;
     width: 100%;
     z-index: 5;
 }
 .stickyshadow {
     position: fixed;
+    -webkit-backface-visibility: hidden;
+
     top:0px;
     height:6vh;
     width: 100%;
